--- a/math_preamble.tex
+++ b/math_preamble.tex
@@ -95,7 +95,7 @@
 \newcommand{\ceil}[1]{\left\lceil #1 \right\rceil}
 \newcommand{\ceiling}[1]{\left\lceil #1 \right\rceil}
 
-% Innder Product
+% Inner Product
 \newcommand{\inner}[1]{\left\langle #1 \right\rangle}
 
 % Probability and Expectation
